# sim_vehicle_control

./: CMakeLists.txt  README.md
Filter/: FilterCCF.h
filter/: filterCCF.h
matplotlib/: matplotlibcpp.h  python_graph_plotter.cpp
opt_solver/: nearest_neighbor_search.cpp
src/: controller.cpp  controller.h  dynamics.cpp  dynamics.h  main.cpp  param.h  plant_model.h  ref_trajectory.csv  ref_trajectory2.csv  runge_kutta.h
tools/: plot_graph.py
